add query to database

--- a/views/about.ejs
+++ b/views/about.ejs
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/css/main.css">
     <title>Om sidan</title>
 </head>
 
@@ -11,7 +12,7 @@
     <header>
         <ul>
             <li><a href="/">Startsidan</a></li>
-            <li><a href="/members">Medlemmar</a></li>
+            <li><a href="/addcourse">Lägg till kurser</a></li>
             <li><a href="/about">Om sidan</a></li>
         </ul>
     </header>
