--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,3 +1,68 @@
-h1 {
-    font-size: 80px;
+@import url("https://fonts.googleapis.com/css2?family=Sansita+Swashed:wght@600&display=swap");
+
+body {
+    margin: 0 auto;
+    max-width: fit-content;
+    padding: 0;
+    box-sizing: border-box;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    background: linear-gradient(45deg, greenyellow, dodgerblue);
+    font-family: "Sansita Swashed", cursive;
 }
+
+h1 {
+    font-size: 2em;
+    border-left: 5px solid dodgerblue;
+    padding: 10px;
+    color: #000;
+    letter-spacing: 5px;
+    margin-bottom: 60px;
+    font-weight: bold;
+    padding-left: 10px;
+}
+
+h2{
+    margin-top: 0px;
+}
+
+p {
+    margin: 0;
+}
+
+input {
+    margin-bottom: 10px;
+}
+
+#courseForm,
+#courseList{
+    background-color: white;
+    opacity: 0.9;
+    padding: 10px;
+    margin-bottom: 20px;
+    border-radius: 10px;
+}
+
+.course {
+    border: solid 1px black;
+    margin-bottom: 10px;
+    border-radius: 10px;
+}
+
+header a {
+    text-decoration: none;
+    background-color: white;
+    padding: 5px;
+    border-radius: 25px;
+}
+li:hover {
+    transform: scale(1.1);
+}
+li {
+    list-style: none;
+    margin: 10px;
+    margin-bottom: 20px;
+    display: inline;
+}
+
